tests/cli_renderer_traces/cli_renderer_traces.exp
Error ------------------------------------------------------------------------------------------------ code_frame.js:1:6

Cannot cast object literal to object type because number [1] is incompatible with empty [2] in property `p`.
[incompatible-cast]

   code_frame.js:1:6
   1| ({p: 42}: {p: empty});
           ^^ [1]

References:
   code_frame.js:1:15
   1| ({p: 42}: {p: empty});
                    ^^^^^ [2]

Trace:
* path 1:
  1: ({p: 42}: {p: empty});
          ^^ NumT [number]
  1: ({p: 42}: {p: empty});
                   ^^^^^ ~> UseT(PropertyCompatibility, EmptyT) [empty] (from path 2)
* path 2:
  1: ({p: 42}: {p: empty});
      ^^^^^^^ ObjT [object literal]
  1: ({p: 42}: {p: empty});
               ^^^^^^^^^^ ~> UseT(Cast, ObjT) [object type] (from path 3)
* path 3:
  1: ({p: 42}: {p: empty});
      ^^^^^^^ ObjT [object literal]
  1: ({p: 42}: {p: empty});
               ^^^^^^^^^^ ~> TypeCastT [object type]


Error ------------------------------------------------------------------------------------------------ code_frame.js:3:6

Cannot cast object literal to object type because number [1] is incompatible with empty [2] in property `p`.
[incompatible-cast]

   code_frame.js:3:6
   3| ({p: 42}: {p: empty});
           ^^ [1]

References:
   code_frame.js:3:15
   3| ({p: 42}: {p: empty});
                    ^^^^^ [2]

Trace:
* path 1:
  3: ({p: 42}: {p: empty});
          ^^ NumT [number]
  3: ({p: 42}: {p: empty});
                   ^^^^^ ~> UseT(PropertyCompatibility, EmptyT) [empty] (from path 2)
* path 2:
  3: ({p: 42}: {p: empty});
      ^^^^^^^ ObjT [object literal]
  3: ({p: 42}: {p: empty});
               ^^^^^^^^^^ ~> UseT(Cast, ObjT) [object type] (from path 3)
* path 3:
  3: ({p: 42}: {p: empty});
      ^^^^^^^ ObjT [object literal]
  3: ({p: 42}: {p: empty});
               ^^^^^^^^^^ ~> TypeCastT [object type]


Error ------------------------------------------------------------------------------------------------ code_frame.js:6:6

Cannot cast object literal to object type because number [1] is incompatible with empty [2] in property `p`.
[incompatible-cast]

   code_frame.js:6:6
   6|   p: 42,
           ^^ [1]

References:
   code_frame.js:8:6
   8|   p: empty,
           ^^^^^ [2]

Trace:
* path 1:
  6:   p: 42,
          ^^ NumT [number]
  8:   p: empty,
          ^^^^^ ~> UseT(PropertyCompatibility, EmptyT) [empty] (from path 2)
* path 2:
      v
  5: ({
  6:   p: 42,
  7: }: {
     ^ ObjT [object literal]
        v
  7: }: {
  8:   p: empty,
  9: });
     ^ ~> UseT(Cast, ObjT) [object type] (from path 3)
* path 3:
      v
  5: ({
  6:   p: 42,
  7: }: {
     ^ ObjT [object literal]
        v
  7: }: {
  8:   p: empty,
  9: });
     ^ ~> TypeCastT [object type]


Error ----------------------------------------------------------------------------------------------- code_frame.js:11:6

Cannot cast object literal to object type because number [1] is incompatible with empty [2] in property `p`.
[incompatible-cast]

   code_frame.js:11:6
   11| ({p: 42}: {p: empty});
            ^^ [1]

References:
   code_frame.js:11:15
   11| ({p: 42}: {p: empty});
                     ^^^^^ [2]

Trace:
* path 1:
 11: ({p: 42}: {p: empty});
          ^^ NumT [number]
 11: ({p: 42}: {p: empty});
                   ^^^^^ ~> UseT(PropertyCompatibility, EmptyT) [empty] (from path 2)
* path 2:
 11: ({p: 42}: {p: empty});
      ^^^^^^^ ObjT [object literal]
 11: ({p: 42}: {p: empty});
               ^^^^^^^^^^ ~> UseT(Cast, ObjT) [object type] (from path 3)
* path 3:
 11: ({p: 42}: {p: empty});
      ^^^^^^^ ObjT [object literal]
 11: ({p: 42}: {p: empty});
               ^^^^^^^^^^ ~> TypeCastT [object type]


Error ------------------------------------------------------------------------------------------------------ test.js:7:6

Cannot cast object literal to object type because number [1] is incompatible with empty [2] in property `p`.
[incompatible-cast]

   test.js:7:6
   7|   p: 42, // Error: number ~> empty
           ^^ [1]

References:
   test.js:9:6
   9|   p: empty,
           ^^^^^ [2]

Trace:
* path 1:
  7:   p: 42, // Error: number ~> empty
          ^^ NumT [number]
  9:   p: empty,
          ^^^^^ ~> UseT(PropertyCompatibility, EmptyT) [empty] (from path 2)
* path 2:
      v
  6: ({
  7:   p: 42, // Error: number ~> empty
  8: }: {
     ^ ObjT [object literal]
        v
  8: }: {
  9:   p: empty,
 10: });
     ^ ~> UseT(Cast, ObjT) [object type] (from path 3)
* path 3:
      v
  6: ({
  7:   p: 42, // Error: number ~> empty
  8: }: {
     ^ ObjT [object literal]
        v
  8: }: {
  9:   p: empty,
 10: });
     ^ ~> TypeCastT [object type]


Error ----------------------------------------------------------------------------------------------------- test.js:13:6

Cannot cast object literal to object type because number [1] is incompatible with empty [2] in property `a`.
[incompatible-cast]

   test.js:13:6
   13|   a: 1, // Error: number ~> empty
            ^ [1]

References:
   test.js:17:6
   17|   a: empty,
            ^^^^^ [2]

Trace:
* path 1:
 13:   a: 1, // Error: number ~> empty
          ^ NumT [number]
 17:   a: empty,
          ^^^^^ ~> UseT(PropertyCompatibility, EmptyT) [empty] (from path 2)
* path 2:
      v
 12: ({
 13:   a: 1, // Error: number ~> empty
 14:   b: 2, // Error: number ~> empty
 15:   c: 3, // Error: number ~> empty
 16: }: {
     ^ ObjT [object literal]
        v
 16: }: {
 17:   a: empty,
 18:   b: empty,
 19:   c: empty,
 20: });
     ^ ~> UseT(Cast, ObjT) [object type] (from path 3)
* path 3:
      v
 12: ({
 13:   a: 1, // Error: number ~> empty
 14:   b: 2, // Error: number ~> empty
 15:   c: 3, // Error: number ~> empty
 16: }: {
     ^ ObjT [object literal]
        v
 16: }: {
 17:   a: empty,
 18:   b: empty,
 19:   c: empty,
 20: });
     ^ ~> TypeCastT [object type]


Error ----------------------------------------------------------------------------------------------------- test.js:14:6

Cannot cast object literal to object type because number [1] is incompatible with empty [2] in property `b`.
[incompatible-cast]

   test.js:14:6
   14|   b: 2, // Error: number ~> empty
            ^ [1]

References:
   test.js:18:6
   18|   b: empty,
            ^^^^^ [2]

Trace:
* path 1:
 14:   b: 2, // Error: number ~> empty
          ^ NumT [number]
 18:   b: empty,
          ^^^^^ ~> UseT(PropertyCompatibility, EmptyT) [empty] (from path 2)
* path 2:
      v
 12: ({
 13:   a: 1, // Error: number ~> empty
 14:   b: 2, // Error: number ~> empty
 15:   c: 3, // Error: number ~> empty
 16: }: {
     ^ ObjT [object literal]
        v
 16: }: {
 17:   a: empty,
 18:   b: empty,
 19:   c: empty,
 20: });
     ^ ~> UseT(Cast, ObjT) [object type] (from path 3)
* path 3:
      v
 12: ({
 13:   a: 1, // Error: number ~> empty
 14:   b: 2, // Error: number ~> empty
 15:   c: 3, // Error: number ~> empty
 16: }: {
     ^ ObjT [object literal]
        v
 16: }: {
 17:   a: empty,
 18:   b: empty,
 19:   c: empty,
 20: });
     ^ ~> TypeCastT [object type]


Error ----------------------------------------------------------------------------------------------------- test.js:15:6

Cannot cast object literal to object type because number [1] is incompatible with empty [2] in property `c`.
[incompatible-cast]

   test.js:15:6
   15|   c: 3, // Error: number ~> empty
            ^ [1]

References:
   test.js:19:6
   19|   c: empty,
            ^^^^^ [2]

Trace:
* path 1:
 15:   c: 3, // Error: number ~> empty
          ^ NumT [number]
 19:   c: empty,
          ^^^^^ ~> UseT(PropertyCompatibility, EmptyT) [empty] (from path 2)
* path 2:
      v
 12: ({
 13:   a: 1, // Error: number ~> empty
 14:   b: 2, // Error: number ~> empty
 15:   c: 3, // Error: number ~> empty
 16: }: {
     ^ ObjT [object literal]
        v
 16: }: {
 17:   a: empty,
 18:   b: empty,
 19:   c: empty,
 20: });
     ^ ~> UseT(Cast, ObjT) [object type] (from path 3)
* path 3:
      v
 12: ({
 13:   a: 1, // Error: number ~> empty
 14:   b: 2, // Error: number ~> empty
 15:   c: 3, // Error: number ~> empty
 16: }: {
     ^ ObjT [object literal]
        v
 16: }: {
 17:   a: empty,
 18:   b: empty,
 19:   c: empty,
 20: });
     ^ ~> TypeCastT [object type]



Found 8 errors
